syntax="proto3";

option go_package="./gen";


message UserRequest{
    string name=1;
    int32 age=2;
    string email=3;
    string password=4;

}

message UserResponse {
    int32 user_id=1;
    string name=2;
    int32 age=3;
    string email=4;
    string password=5;
    string created_at=6;

}

message GetUserReq{
    int32 user_id=1;
}

message DeleteResponse{
    string status=1;
}

message UpdateReq{
    int32 user_id=1;
    string name=2;
    int32 age=3;
    string email=4;
    string password=5;
}


service UserService {
    rpc CreateUser(UserRequest) returns(UserResponse);
    rpc GetUser(GetUserReq) returns(UserResponse);
    rpc UpdateUser(UpdateReq) returns(UserResponse);
    rpc DeleteUser(GetUserReq) returns(DeleteResponse);
}

